syntax = "proto3";

package product.v1alpha;

message Product {
  string title = 1;
  int32 id = 2;
  string description = 3;
  float price = 4;
}

service ProductCRUDService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string title = 1;
  int32 id = 2;
  string description = 3;
  float price = 4;
}

message GetResponse {
  repeated Product products = 1;
}

message AddRequest {
  string title = 1;
  string description = 2;
  float price = 3;
}

message AddResponse {
  Product product = 1;
}

message UpdateRequest {
  int32 id = 1;

  string title = 2;
  string description = 3;
  float price = 4;
}

message UpdateResponse {
  Product product = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  Product product = 1;
}